--- a/admin-ui/package.json
+++ b/admin-ui/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
